--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -213,12 +213,7 @@
 </div>
 
 <!-- 页脚 -->
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">Copyright © 2019 · 不挂高数社区</span>
-    </div>
-</footer>
-
+<div th:insert="~{footer :: footer}"></div>
 
 <script src="/js/url.js" type="text/javascript"></script>
 </body>
