--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,7 +9,7 @@
     <title th:text="${question.title}">问题</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
-    <script src="/bootstrap/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
+    <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
@@ -83,7 +83,7 @@
             </div>
             <hr/>
             <!-- 编辑 -->
-            <div class="container text-right">
+            <div class="container text-right" th:if="${session.user != null && session.user.getId() == question.user.getId()}">
                 <a class="edit-a" th:href="'/publish/' + ${question.getQuestionId()}"><img src="/image/icon/edit.svg" width="18" height="18">&nbsp;编&nbsp;辑</a>
             </div>
 
