更换验证码并修复Random函数

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -139,7 +139,7 @@
                 <div class="row mt-4">
                     <div class="col text-right">
                         <a href="javascript:void(0);">
-                            <img src="/captcha/captchaImage" onclick="this.src='/captcha/captchaImage?'+Math.random()"/>
+                            <img src="/captche/images" onclick="this.src='/captche/images?'+Math.random()"/>
                         </a>
                     </div>
                     <div class="form-group mr-3">
