--- a/src/main/resources/templates/SignIn.html
+++ b/src/main/resources/templates/SignIn.html
@@ -115,7 +115,7 @@
     <!--待添加验证码 -->
     <div class="form-group">
         <a href="javascript:void(0);">
-            <img src="/captcha/captchaImage" onclick="this.src='/captcha/captchaImage?'+Math.random()"/>
+            <img src="/captche/images" onclick="this.src='/captche/images?'+Math.random()"/>
         </a>
         <input type="text" th:placeholder="#{publish.issue.CAPTCHA}" name="validateCode" id="validateCode" class="form-control" required="required"/>
         <small id="validateCodeMessage" class="form-text text-muted" th:text="${kaptchaMsg}"></small>
