--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -181,7 +181,7 @@
         <small id="userMajorHelp" class="form-text"></small>
     </div>
 
-    <!--待添加验证码 -->
+    <!--验证码 -->
     <div class="form-group">
         <a href="javascript:void(0);">
             <img src="/captche/images" onclick="this.src='/captche/images?'+Math.random()"/>
@@ -191,7 +191,7 @@
 
     </div>
 
-    <button class="btn btn-lg btn-primary btn-block" type="button" onclick="check()" th:text="#{index.signup}">注册</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{index.signup}">注册</button>
 
 
     <p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
