--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -173,7 +173,7 @@
             <small class="text-muted">•<span style="font-weight: bold;">选择标签：</span>选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字。
             </small>
             <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，并遵守国际相关法律法规，互联网并非法外之地。</small>
+            <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，并遵守国家相关法律法规，互联网并非法外之地。</small>
             <div class="container mt-2 text-center"><img class="border w-100" src="/image/v2-c277d2ad52b61fcd3fa82577575efc4c_r.jpg"/></div>
             <br/><br/>
             <br/><br/>
