--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -74,7 +74,7 @@
                     <textarea class="form-control" id="issues-text" name="description" rows="6" th:text="${question.getDescription()}"></textarea>
                     <small id="textHelp" class="form-text" style="color: red" th:text="${textMessage}"></small>
                 </div>
-                <input style="display:none;" name="questionId" th:value="${question.getQuestionId()}">
+                <input type="hidden" name="questionId" th:value="${question.getQuestionId()}">
                 <!--上传附件--->
                 <div class="row">
                     <div class="col-5">
