--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,7 +9,9 @@
     <title th:text="${question.title}">问题</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/question.css">
     <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="/js/vue.min.js" type="text/javascript"></script>
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
@@ -44,8 +46,9 @@
         a:hover {
             text-decoration: none;
         }
+
         .question-comment {
-            border-bottom: solid 1px rgba(0,0,0,.1);
+            border-bottom: solid 1px rgba(0, 0, 0, .1);
         }
     </style>
 </head>
@@ -112,24 +115,102 @@
             <hr class="mt-2"/>
             <!-- 显示回复 -->
             <div class="container">
-                <div class="media mt-4 question-comment"  th:each="comment : ${comments}">
-                    <img class="align-self-start mr-3" th:src="'/' + ${comment.user.getHeadUrl()}" width="40" height="40">
+                <div class="media mt-4 question-comment" th:each="comment : ${comments}">
+                    <img class="align-self-start mr-3" th:src="'/' + ${comment.user.getHeadUrl()}" width="40"
+                         height="40">
                     <div class="media-body">
-                        <a class="mt-0 ml-0 issuse-question-people" th:href="${'/user/' + comment.user.getUserId()}"><span th:text="${comment.user.getUserName()}">顶部对齐</span></a>
-                        <p class="mt-2" th:text="${comment.getContent()}">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                        <a class="mt-0 ml-0 issuse-question-people"
+                           th:href="${'/user/' + comment.user.getUserId()}"><span
+                                th:text="${comment.user.getUserName()}">顶部对齐</span></a>
+                        <p class="mt-2" th:text="${comment.getContent()}">Cras sit amet nibh libero, in gravida nulla.
+                            Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
+                            tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
+                            congue felis in faucibus.</p>
                         <div class="row mt-2 mb-2">
                             <div class="col">
                                 <button type="button" class="btn btn-outline-primary btn-sm">
                                     <img src="/image/icon/clicklike.svg" width="auto" height="20">
                                     <span class="badge badge-light" th:text="${comment.getLikeCount()}">0</span>
                                 </button>
-                                <button type="button" class="btn btn-outline-dark btn-sm ml-2">
+                                <button type="button" class="btn btn-outline-dark btn-sm ml-2"
+                                        th:data-id="${comment.getCommentId()}"
+                                        onclick="showSecondComment(this)">
                                     <img src="/image/icon/comment.svg" width="auto" height="20">
                                     <span class="badge badge-light" th:text="${comment.getCommentCount()}">0</span>
                                 </button>
                             </div>
                             <div class="col text-right">
                                 <p th:text="${comment.getModifiedTime()}"></p>
+                            </div>
+                        </div>
+
+                            <!-- 回复评论的评论  二级评论 -->
+                            <div class="collapse mt-2  shadow-sm second-comment ml-2 mr-3 border"
+                                 th:id="${'comment-' + comment.getCommentId()}">
+
+                                <div class="container" style="padding: 0px;" th:id="${'commentBody-' + comment.getCommentId()}">
+
+<!--
+                                    <div class="media mt-3 mr-2 ml-2">
+                                        <img class="align-self-start mr-3" src="/image/head/boyhead.png" width="35"
+                                             height="35">
+                                        <div class="media-body">
+                                            <div class="row mt-0">
+                                                <div class="col">
+                                                    <p><a href="#">顶部对齐</a>&nbsp;<span>2019-08-31 18:45</span></p>
+                                                </div>
+                                                <div class="col text-right">
+                                                    <a href="#">删除</a>&nbsp;
+                                                    <a href="#">回复</a>
+                                                </div>
+                                            </div>
+                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+                                                ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
+                                                viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
+                                                Donec lacinia congue felis in faucibus.</p>
+                                            <a href="#">
+                                                <img src="/image/icon/clicklike.svg" width="auto" height="20">
+                                                <span class="badge badge-light">0</span>
+                                            </a>
+                                            <a href="#">
+                                                <img src="/image/icon/comment.svg" width="auto" height="20">
+                                                <span class="badge badge-light">0</span>
+                                            </a>
+                                            <hr/>
+                                        </div>
+                                    </div>-->
+
+
+                                    <div class="container second-comment-text ml-0 mr-0">
+                                        <div class="row">
+                                            <div class="col mt-4 ml-2 mr-2">
+                                                <div class="form-group">
+                                                    <!-- 评论内容 -->
+                                                    <textarea class="form-control" th:id="${'second-content-' + comment.getCommentId()}"
+                                                              rows="1"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col text-right">
+                                                <a href="javascript:void(0);">
+                                                    <img src="/captche/images"
+                                                         onclick="this.src='/captche/images?'+Math.random()"
+                                                         height="40dp"/>
+                                                </a>
+                                            </div>
+                                            <div class="col mb-2">
+                                                <input type="text" height="40dp" class="form-control mt-1"
+                                                       th:id="${'second-captcha-' + comment.getCommentId()}" placeholder="验证码">
+                                            </div>
+                                            <div class="col text-right">
+                                                <button type="button" th:data-id="${comment.getCommentId()}" class="btn btn-success btn-sm mr-2 mt-2"
+                                                    onclick="twoLevelComment(this)">提交
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+
                             </div>
                         </div>
                     </div>
@@ -170,7 +251,7 @@
                         </div>
                     </div>
                     <div class="col text-right">
-                        <button type="button" class="btn btn-success mt-2" onclick="sendComment()">提交</button>
+                        <button type="button" class="btn btn-success mt-2" onclick="comment()">提交</button>
                     </div>
                 </div>
             </div>
