--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -14,6 +14,12 @@
     <script src="/js/vue.min.js" type="text/javascript"></script>
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
+        ul li {
+            list-style: none;
+        }
+        .relevantQuestion {
+            padding-left: 0px;
+        }
         body {
         / / background-image: url("https://api.isoyu.com/bing_images.php");
             background-color: #efefef;
@@ -93,7 +99,18 @@
             <div class="container">
                 <div th:text="${question.description}"></div>
             </div>
+
             <hr/>
+
+            <!--标签-->
+            <div class="container">
+                <span th:each="tag:${question.getTag().split(',|，')}">
+                    <span class="badge badge-primary mr-2">
+                        <img src="/image/icon/tag.svg" height="15px">
+                        <span class="ml-1" th:text="${tag}"></span>
+                    </span>
+                </span>
+            </div>
             <!-- 编辑 -->
             <div class="container text-right"
                  th:if="${session.user != null && session.user.getId() == question.user.getId()}">
@@ -102,7 +119,7 @@
             </div>
 
             <!--回复导航-->
-            <div class="container">
+            <div class="container mt-4">
                 <div class="row">
                     <div class="col">
                         <h4><span th:text="${question.commentCount}">16</span>个回复</h4>
@@ -144,72 +161,76 @@
                             </div>
                         </div>
 
-                            <!-- 回复评论的评论  二级评论 -->
-                            <div class="collapse mt-2  shadow-sm second-comment ml-2 mr-3 border"
-                                 th:id="${'comment-' + comment.getCommentId()}">
+                        <!-- 回复评论的评论  二级评论 -->
+                        <div class="collapse mt-2  shadow-sm second-comment ml-2 mr-3 border"
+                             th:id="${'comment-' + comment.getCommentId()}">
 
-                                <div class="container" style="padding: 0px;" th:id="${'commentBody-' + comment.getCommentId()}">
+                            <div class="container" style="padding: 0px;"
+                                 th:id="${'commentBody-' + comment.getCommentId()}">
 
-<!--
-                                    <div class="media mt-3 mr-2 ml-2">
-                                        <img class="align-self-start mr-3" src="/image/head/boyhead.png" width="35"
-                                             height="35">
-                                        <div class="media-body">
-                                            <div class="row mt-0">
-                                                <div class="col">
-                                                    <p><a href="#">顶部对齐</a>&nbsp;<span>2019-08-31 18:45</span></p>
-                                                </div>
-                                                <div class="col text-right">
-                                                    <a href="#">删除</a>&nbsp;
-                                                    <a href="#">回复</a>
-                                                </div>
-                                            </div>
-                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                                                ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
-                                                viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                                Donec lacinia congue felis in faucibus.</p>
-                                            <a href="#">
-                                                <img src="/image/icon/clicklike.svg" width="auto" height="20">
-                                                <span class="badge badge-light">0</span>
-                                            </a>
-                                            <a href="#">
-                                                <img src="/image/icon/comment.svg" width="auto" height="20">
-                                                <span class="badge badge-light">0</span>
-                                            </a>
-                                            <hr/>
-                                        </div>
-                                    </div>-->
+                                <!--
+                                                                    <div class="media mt-3 mr-2 ml-2">
+                                                                        <img class="align-self-start mr-3" src="/image/head/boyhead.png" width="35"
+                                                                             height="35">
+                                                                        <div class="media-body">
+                                                                            <div class="row mt-0">
+                                                                                <div class="col">
+                                                                                    <p><a href="#">顶部对齐</a>&nbsp;<span>2019-08-31 18:45</span></p>
+                                                                                </div>
+                                                                                <div class="col text-right">
+                                                                                    <a href="#">删除</a>&nbsp;
+                                                                                    <a href="#">回复</a>
+                                                                                </div>
+                                                                            </div>
+                                                                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+                                                                                ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus
+                                                                                viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
+                                                                                Donec lacinia congue felis in faucibus.</p>
+                                                                            <a href="#">
+                                                                                <img src="/image/icon/clicklike.svg" width="auto" height="20">
+                                                                                <span class="badge badge-light">0</span>
+                                                                            </a>
+                                                                            <a href="#">
+                                                                                <img src="/image/icon/comment.svg" width="auto" height="20">
+                                                                                <span class="badge badge-light">0</span>
+                                                                            </a>
+                                                                            <hr/>
+                                                                        </div>
+                                                                    </div>-->
 
 
-                                    <div class="container second-comment-text ml-0 mr-0">
-                                        <div class="row">
-                                            <div class="col mt-4 ml-2 mr-2">
-                                                <div class="form-group">
-                                                    <!-- 评论内容 -->
-                                                    <textarea class="form-control" th:id="${'second-content-' + comment.getCommentId()}"
-                                                              rows="1"></textarea>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col text-right">
-                                                <a href="javascript:void(0);">
-                                                    <img src="/captche/images"
-                                                         onclick="this.src='/captche/images?'+Math.random()"
-                                                         height="40dp"/>
-                                                </a>
-                                            </div>
-                                            <div class="col mb-2">
-                                                <input type="text" height="40dp" class="form-control mt-1"
-                                                       th:id="${'second-captcha-' + comment.getCommentId()}" placeholder="验证码">
-                                            </div>
-                                            <div class="col text-right">
-                                                <button type="button" th:data-id="${comment.getCommentId()}" class="btn btn-success btn-sm mr-2 mt-2"
-                                                    onclick="twoLevelComment(this)">提交
-                                                </button>
+                                <div class="container second-comment-text ml-0 mr-0">
+                                    <div class="row">
+                                        <div class="col mt-4 ml-2 mr-2">
+                                            <div class="form-group">
+                                                <!-- 评论内容 -->
+                                                <textarea class="form-control"
+                                                          th:id="${'second-content-' + comment.getCommentId()}"
+                                                          rows="1"></textarea>
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col text-right">
+                                            <a href="javascript:void(0);">
+                                                <img src="/captche/images"
+                                                     onclick="this.src='/captche/images?'+Math.random()"
+                                                     height="40dp"/>
+                                            </a>
+                                        </div>
+                                        <div class="col mb-2">
+                                            <input type="text" height="40dp" class="form-control mt-1"
+                                                   th:id="${'second-captcha-' + comment.getCommentId()}"
+                                                   placeholder="验证码">
+                                        </div>
+                                        <div class="col text-right">
+                                            <button type="button" th:data-id="${comment.getCommentId()}"
+                                                    class="btn btn-success btn-sm mr-2 mt-2"
+                                                    onclick="twoLevelComment(this)">提交
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
@@ -268,14 +289,28 @@
                      height="60"/>
                 <a th:href="'/user/'+ ${question.user.getUserId()}"><p th:text="${question.user.getUserName()}"></p></a>
             </div>
-
-            <br/><br/>
-            <h5>相关问题</h5>
-            <div class="container">
-
+            <hr/>
+            <br/>
+            <h5>站长微信</h5>
+            <div class="container text-center mt-2">
+                <img src="/image/icon/weixin.jpg" width="70%">
             </div>
-
-            <br/><br/>
+            <hr/>
+            <h5 class="mb-4">相关问题</h5>
+            <div class="container-fluid relevantQuestion">
+                <div th:each="relevant : ${relevantQuestion}">
+                    <ul class="mt-2 relevantQuestion">
+                        <li >
+                            <a th:href="${'/question/' + relevant.getQuestionId()}">
+                                <span th:text="${relevant.getTitle()}"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <br/>
+            <hr/>
+            <br/>
             <div class="container" style="">
                 广告位招租
             </div>
