--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -201,7 +201,7 @@
                         <p class="mb-0 small">
                             <a class="issuse-question-class" target="_blank" href="#" th:text="${question.classification}">分类</a>
                             <a class="issuse-question-people" target="_blank" href="#" th:text="${user.userName}">人名</a>
-                            <span class="issuse-question-span">回复了问题
+                            <span class="issuse-question-span">
                                 •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
