--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -257,6 +257,7 @@
                                 watch: false,
                                 tex: true,
                                 flowChart : true,
+                                autoFocus: false,
                                 //saveHTMLToTextarea : true,
                                 //emoji: true,
                                 placeholder: "请输入问题描述",
@@ -383,7 +384,6 @@
                 // htmlDecode : true,  // Enable / disable HTML tag encode.
                 // htmlDecode : "style,script,iframe",  // Note: If enabled, you should filter some dangerous HTML tags for website security.
             });
-            console.log(i);
         }
     });
 </script>
