--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -191,7 +191,7 @@
             <div class="text-center" th:if="${paginationDto.totalPage} == 0">它还没有发布任何动态</div>
 
             <!-- 帖子 -->
-            <div th:each="question : ${paginationDto.questions}">
+            <div th:each="question : ${paginationDto.data}">
                 <div class="media ml-3">
                     <div class="media-body">
                         <h5 class="mt-0"><a class="link-to-text" target="_blank"  th:href="'/question/' + ${question.getQuestionId()}" th:text="${question.title}">中间对齐</a></h5>
