--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" th:href="@{/favicon.png}"/>
     <link rel="bookmark" th:href="@{/favicon.png}"/>
-    <title th:text="#{index.title}">不挂高数社区</title>
+    <title th:text="${user.userName + '的消息通知'}">不挂高数社区</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/index.css"/>
     <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
@@ -42,7 +42,120 @@
     <div class="row">
         <!-- 左边 -->
         <div class="col-xl-9 mt-3 issue-right">
+            <!--标题-->
+            <div class="container">
 
+                    <div class="row">
+                        <div class="col">
+                            <h4>
+                                <img src="/image/icon/message.svg" width="35" height="35"/>
+                                通知
+                            </h4>
+                        </div>
+                        <div class="col-7">
+                            <ul class="nav justify-content-end">
+                                <li class="nav-item">
+                                    <a class="nav-link" th:href="${'/message/'+user.getUserId()}">
+                                        回复 <span class="badge badge-info" th:text="${commentCount}">0</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        点赞 <span class="badge badge-info">0</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        系统 <span class="badge badge-info">0</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a th:href="${'/message/' + user.getUserId() + '/readAll'}" class="btn btn-secondary btn-small">一键已读</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr style="margin-top: 0%;">
+            </div>
+
+            <div th:if="${notifications} != null" class="container">
+                <ul class="list-group list-group-flush" th:each="notification : ${notifications.data}">
+                    <li class="list-group-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <a th:href="${'/user/'+notification.notifierId}"><span th:text="${notification.notifierName}"></span></a>
+                                    <span class="ml-2" th:text="${notification.getTypeName()}"></span>
+                                    <a class="ml-2" th:href="${'/message/' + user.getUserId() +'/' + notification.getId()}"><span th:text="${notification.getOuterTitle()}"></span></a>
+                                    <span th:if="${notification.getType()==2}" class="ml-2">下的评论</span>
+                                    <span class="badge badge-warning" th:if="${notification.getStatus()==0}">未读</span>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col text-right">
+                                    <p th:text="${notification.getCreateTime()}"></p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+
+            <div th:if="${notifications} == null" class="container">
+                <h5>暂无新消息</h5>
+            </div>
+            <div class="container" th:if="${notifications} != null">
+                <!-- 页码 -->
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-end">
+                        <!-- 返回首页 -->
+                        <li class="page-item" th:if="${notifications.showFirstPage}">
+                            <a class="page-link" id="first-page-a" th:href="${'/message/' + user.getUserId()}" aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
+                                <span aria-hidden="true">&laquo;&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
+                        <!-- 上一页 -->
+                        <li class="page-item" th:if="${notifications.showPrevious}">
+                            <a class="page-link" id="link-to-last-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage} - 1)}" aria-label="Previous"
+                               onclick="addLocaleUrlForPage('link-to-last-a')">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
+
+
+                        <li class="page-item" th:each="page : ${notifications.pages}" th:class="${notifications.nowPage == page}? 'page-item active' : 'page-item'">
+                            <a class="page-link" th:href="${'/message/'+user.getUserId()} + @{/(page=${page})}" th:text="${page}" th:id="${page}"
+                               th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
+                                1
+                            </a>
+                        </li>
+
+
+
+                        <!-- 下一页 -->
+                        <li class="page-item" th:if="${notifications.showNext}">
+                            <a class="page-link" id="lind-to-next-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage} + 1)}" aria-label="Next"
+                               onclick="addLocaleUrlForPage('lind-to-next-a')">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
+                        <!-- 最后一页 -->
+                        <li class="page-item" th:if="${notifications.showEndPage}">
+                            <a class="page-link" id="link-to-end-a"  th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.totalPage})}"
+                               th:if="${notifications.showEndPage}"
+                               aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
+                                <span aria-hidden="true">&raquo;&raquo;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <!-- 右边 -->
