添加更换头像功能

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -67,7 +67,8 @@
 
                     <a class="nav-link" href="#"
                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="/image/icon/publish.svg" width="30" height="30"/>
+                        <img class="rounded-circle"
+                             src="/image/icon/publish.svg" width="30" height="30"/>
                         [[#{index.writePost}]]
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
